fix: dark mode - small adjusments

--- a/src/styles/simpleSwitchButton.scss
+++ b/src/styles/simpleSwitchButton.scss
@@ -36,11 +36,11 @@
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: rgb(252, 211, 77);
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px rgb(252, 211, 77);
 }
 
 input:checked + .slider:before {
